--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- fevicon -->
-    <link rel="icon" type="image/icon" href="images/favicon.ico" />
+    <link rel="icon" type="image/icon" href="assets/images/favicon.ico" />
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
     <!-- Tweaks for older IEs-->
@@ -119,7 +119,7 @@
     <footer class="footer text-center">
         <div class="container">
             <p class="text-muted small mb-0">Copyright © 2022</p>
-            <p class="text-muted small mb-0">Hecho por Ricardo Benjamin & Pablo
+            <p class="text-muted small mb-0">Hecho por Ricardo , Benjamin & Pablo
 
         </div>
     </footer>
