--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Agendar Hora<span class="sr-only">(current)</span></a> </li>
+                                <a class="nav-link" href="../Proyect/Sistema/Ingresodefecha.php">Agendar Hora<span class="sr-only">(current)</span></a> </li>
                         </ul>
                     </div>
                     <div class="col-sm-12"></div>
@@ -77,7 +77,7 @@
                                                 <div class="carousel-sporrt_text ">
                                                     <h1 class="banner_taital">AGENDE SU HORA AQUÍ</h1>
                                                     <p class="lorem_text">La Serena Chile</p>
-                                                    <div class="ads_bt"><a href="#">Agendar Hora</a></div>
+                                                    <div class="ads_bt"><a href="../Proyect/Sistema/Ingresodefecha.php">Agendar Hora</a></div>
                                                 </div>
                                             </div>
                                             <div class="col-md-7 col-sm-12">
