--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="col-sm-2">
                     <div class="logo">
-                        <a href="index.html"><img src="assets/images/logo1.png"></a>
+                        <a href="index.html"><img src="assets/images/favicon-16x16.png"></a>
                         <h1 style="color: rgb(16, 16, 16);"> Podologia Marticorena</h1>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="tablet"><img src="assets/images/Photo.png" style="max-width: 100%;"></div>
+                    <div class="tablet"><img src="assets/images/img-01.png" style="max-width: 100%;"></div>
                 </div>
                 <div class="col-md-6">
                     <div class="about_taital">
