--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="login/index.php">Agendar Hora<span class="sr-only">(current)</span></a> </li>
+                                <a class="nav-link" style="color: rgb(16, 16, 16);"" href="login/index.php">Agendar Hora<span class="sr-only">(current)</span></a> </li>
                         </ul>
                     </div>
                     <div class="col-sm-12"></div>
